--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
                 <ul>
                     <div class="user">
                         <li>
-                         <img class="fotoPerfil" src="/img/perfiles/mjr1.jpeg" alt="foto de usuario">  <a href="#">Maria</a>
+                         <img class="fotoPerfil" src="img/perfiles/mjr1.jpeg" alt="foto de usuario">  <a href="#">Maria</a>
 
-                         <img src="/img/msj.png" alt="icono mensajeria" style="width:18px;height:18px;">
-                         <img src="/img/menu.png" alt="icono menu" style="width:18px;height:18px;" >
+                         <img src="img/msj.png" alt="icono mensajeria" style="width:18px;height:18px;">
+                         <img src="img/menu.png" alt="icono menu" style="width:18px;height:18px;" >
                         </li>
                      </div> 
                      <label class="status">Activa ahora</label>  
@@ -28,7 +28,7 @@
                     <hr>
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/mjr2.jpeg" alt="foto de usuario">  
+                                <img class="fotoPerfil" src="img/perfiles/mjr2.jpeg" alt="foto de usuario">  
                                 <div class="espacio">
                                 <a href="#">Juanita</a>
                                  </div>
@@ -38,7 +38,7 @@
                         <hr>
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/man1.jpeg" alt="foto de usuario"> 
+                                <img class="fotoPerfil" src="img/perfiles/man1.jpeg" alt="foto de usuario"> 
                                 <div class="espacio"></div> 
                                 <a href="#">Alberto</a>
                                 <label class="msj">Blanditiis praesentium </label>
@@ -48,7 +48,7 @@
 
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/man2.jpeg" alt="foto de usuario">  
+                                <img class="fotoPerfil" src="img/perfiles/man2.jpeg" alt="foto de usuario">  
                                 <div class="espacio"></div> 
                                 <a href="#">Ignacio</a>
                                 <label class="msj">Oficiis debitis aut </label>
@@ -58,7 +58,7 @@
 
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/man3.jpeg" alt="foto de usuario">  
+                                <img class="fotoPerfil" src="img/perfiles/man3.jpeg" alt="foto de usuario">  
                                 <div class="espacio"></div> 
                                 <a href="#">Cristian</a>
                                 <label class="msj">Nam libero tempore</label>
@@ -68,7 +68,7 @@
 
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/mjr3.jpeg" alt="foto de usuario">  
+                                <img class="fotoPerfil" src="img/perfiles/mjr3.jpeg" alt="foto de usuario">  
                                 <div class="espacio"></div> 
                                 <a href="#">María José</a>
                                 <label class="msj">Impedit quo minus id</label>
@@ -78,7 +78,7 @@
 
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/man4.jpeg" alt="foto de usuario">  
+                                <img class="fotoPerfil" src="img/perfiles/man4.jpeg" alt="foto de usuario">  
                                 <div class="espacio"></div> 
                                 <a href="#">Gonzalo</a>
                                 <label class="msj">At vero eos et acusa</label>
@@ -88,7 +88,7 @@
 
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/man5.jpeg" alt="foto de usuario">  
+                                <img class="fotoPerfil" src="img/perfiles/man5.jpeg" alt="foto de usuario">  
                                 <div class="espacio"></div> 
                                 <a href="#">Juan Pablo</a>
                                 <label class="msj">Necessitatibus saepe</label>
@@ -98,7 +98,7 @@
 
                         <div class="user">
                             <li>
-                                <img class="fotoPerfil" src="/img/perfiles/mjr4.jpeg" alt="foto de usuario">
+                                <img class="fotoPerfil" src="img/perfiles/mjr4.jpeg" alt="foto de usuario">
                                 <div class="espacio"> </div>
                                 <a href="#">Magdalena</a>
                                 <label class="msj">Ut et voluptates</label>
@@ -111,7 +111,7 @@
             </fieldset>
             </menu>
     <section class="principal">
-        <img class="img" src="/img/Networking.png" alt="imagen alusiva al networking">
+        <img class="img" src="img/Networking.png" alt="imagen alusiva al networking">
         <h1>Comienza el Networking</h1>
         <p>Presiona el boton <b>"Nuevo chat" </b>para comenzar a crear nuevas redes de contacto para tu empresa o emprendimiento</p>
     </section>
